unpackaged/main/default/objects/ETT_Delivery_Note__c/ETT_Delivery_Note__c.object-meta.xml
<CustomObject>
    <label>Delivery Note</label>
    <nameField>
        <displayFormat>DNN-{0000}</displayFormat>
        <label>Delivery Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>