unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>