unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <formula>Tyre_Service_Appointment__r.Driver__r.FirstName+&#39; &#39;+ Tyre_Service_Appointment__r.Driver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>