unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/Estimate_Quotation__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Quotation</label>
    <referenceTo>ETT_Estimate_Quotation__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>