unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Address__c.field-meta.xml
<CustomField>
    <fullName>ETT_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>