unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Brand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Name</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>