unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Casing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Casing__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Casing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>