unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Collection_Cards__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Cards__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Cards</label>
    <length>250</length>
    <type>Text</type>
</CustomField>