unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>