unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Is_Delivery_Appointment_Booked__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Delivery_Appointment_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Delivery Appointment Booked</label>
    <type>Checkbox</type>
</CustomField>