unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Is_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>ETT_Is_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>