unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Job_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>ETT_Job_Card__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>