unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>ETT_Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Retread Tyres</fullName>
            </value>
            <value>
                <fullName>Initial Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>