unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Pattern_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern Size</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>