unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Remark__c.field-meta.xml
<CustomField>
    <fullName>ETT_Remark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>