unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>