unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>