unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/ETT_Service_Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>ETT_Service_Appointment_Status__c</fullName>
    <formula>TEXT(ETT_Service_Appointment__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment Status</label>
    <type>Text</type>
</CustomField>