unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/Tyre_Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Inspection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inspection Card</label>
    <referenceTo>ETT_Inspection_Card__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>