unpackaged/main/default/objects/ETT_Delivery_Note__c/fields/Tyre_Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Service Appointment</label>
    <referenceTo>Tyre_Collection_Appointment__c</referenceTo>
    <relationshipLabel>Delivery Notes</relationshipLabel>
    <relationshipName>Delivery_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>