unpackaged/main/default/objects/ETT_Delivery_Note__c/recordTypes/ETT_Tyre_Customer.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Customer</fullName>
    <active>true</active>
    <label>Tyre - Customer</label>
</RecordType>