unpackaged/main/default/objects/ETT_Delivery_Note__c/recordTypes/ETT_Tyre_Supplier.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Supplier</fullName>
    <active>true</active>
    <label>Tyre - Supplier</label>
</RecordType>