unpackaged/main/default/objects/ETT_Delivery_Note__c/validationRules/Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(ETT_Phone__c)),
NOT(REGEX(ETT_Phone__c, &quot;(\\D?[+]\\D?[9]\\D?[7]\\D?[1])\\s?[0-9]{8,9}&quot;)),FALSE)</errorConditionFormula>
    <errorMessage>Phone number should start with +971 and should have 8  or 9 digits after space.</errorMessage>
</ValidationRule>